Adding Image Slider

--- a/css/index.css
+++ b/css/index.css
@@ -105,3 +105,7 @@ html {
   color: #738adb;
   background-color: white;
 }
+body{
+  background: url(https://i0.wp.com/www.estidia.eu/wp-content/uploads/2018/04/Savin-NY-Website-Background-Web.jpg?ssl=1);
+  background-size: cover;
+}
